--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         align-items: center;
         justify-content: center;
         font-family: "Segoe UI", Arial, sans-serif;
-        color: white;
+        color: #000; /* Black text */
     }
 
     @keyframes rainbowFlow {
@@ -42,26 +42,27 @@
         gap: 40px;
     }
 
-    /* Soft Glow */
+    /* Soft glow for black text — very subtle */
     .glow {
         text-shadow:
-            0 0 8px rgba(255,255,255,0.7),
-            0 0 14px rgba(255,255,255,0.6),
-            0 0 22px rgba(255,255,255,0.5);
+            0 0 4px rgba(0,0,0,0.15),
+            0 0 10px rgba(0,0,0,0.10);
     }
 
     /* Time */
     .time {
         font-size: 90px;
-        font-weight: 600;
+        font-weight: 700;
         letter-spacing: 3px;
+        color: #000;
     }
 
     .ampm {
         font-size: 40px;
-        font-weight: 400;
+        font-weight: 500;
         margin-left: 10px;
         opacity: 0.9;
+        color: #000;
     }
 
     /* Date Section */
@@ -73,13 +74,15 @@
 
     .weekday {
         font-size: 48px;
-        font-weight: 600;
+        font-weight: 700;
+        color: #000;
     }
 
     .date {
         font-size: 38px;
         letter-spacing: 2px;
         opacity: 0.95;
+        color: #000;
     }
 </style>
 </head>
@@ -132,5 +135,3 @@ updateClock();
 
 </body>
 </html>
-
-
