--- a/index.html
+++ b/index.html
@@ -2,27 +2,32 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Pastel Clock - LG WebOS Split Screen</title>
+<title>HL Steel Corner Clock - Pastel</title>
 <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
 
     body {
         width: 100vw;
         height: 100vh;
+
+        /* Pastel Rainbow Gradient */
         background: linear-gradient(270deg,
-            #ffd1dc,
-            #ffe2b6,
-            #fff7b2,
-            #d4f8d3,
-            #c9e8ff,
-            #ddd4ff,
-            #ffd1dc
+            #ffd1dc, /* pastel pink */
+            #ffe2b6, /* pastel peach */
+            #fff7b2, /* pastel yellow */
+            #d4f8d3, /* pastel mint */
+            #c9e8ff, /* pastel sky blue */
+            #ddd4ff, /* pastel lavender */
+            #ffd1dc  /* loop back pastel pink */
         );
         background-size: 1200% 1200%;
         animation: rainbowFlow 28s ease infinite;
-        font-family: "Segoe UI", Arial, sans-serif;
-        color: #000;
+
         display: flex;
+        align-items: center;
+        justify-content: center;
+        font-family: "Segoe UI", Arial, sans-serif;
+        color: #000; /* Black text */
     }
 
     @keyframes rainbowFlow {
@@ -31,64 +36,93 @@
         100% { background-position: 0% 50%; }
     }
 
-    /* Main split: Left 25%, Right 75% */
-    .left { width: 25%; display: flex; flex-direction: column; }
-    .right { width: 75%; display: flex; justify-content: flex-end; align-items: center; padding-right: 20px; }
-
-    /* Left split: Top 20%, Bottom 80% */
-    .left-top { height: 20%; display: flex; align-items: center; justify-content: center; }
-    .left-bottom { height: 80%; display: flex; align-items: center; justify-content: flex-start; padding-left: 10px; }
-
-    /* Time */
-    .time { font-size: 80px; font-weight: 700; letter-spacing: 2px; text-shadow: 0 0 6px rgba(0,0,0,0.12); }
-
-    /* AMPM closer to time (50% reduced spacing) */
-    .ampm {
-        font-size: 32px;
-        font-weight: 600;
-        margin-left: 5px; /* tightened spacing */
-        text-shadow: 0 0 4px rgba(0,0,0,0.1);
+    .clock-container {
+        display: flex;
+        align-items: center;
+        gap: 40px;
     }
 
-    /* Weekday + Date on right side */
-    .weekday { font-size: 50px; font-weight: 700; text-shadow: 0 0 6px rgba(0,0,0,0.12); }
-    .date { font-size: 40px; letter-spacing: 2px; text-shadow: 0 0 6px rgba(0,0,0,0.12); margin-top: 8px; }
+    /* Soft glow for black text — very subtle */
+    .glow {
+        text-shadow:
+            0 0 4px rgba(0,0,0,0.15),
+            0 0 10px rgba(0,0,0,0.10);
+    }
+
+    /* Time */
+    .time {
+        font-size: 90px;
+        font-weight: 700;
+        letter-spacing: 3px;
+        color: #000;
+    }
+
+    .ampm {
+        font-size: 40px;
+        font-weight: 500;
+        margin-left: 10px;
+        opacity: 0.9;
+        color: #000;
+    }
+
+    /* Date Section */
+    .date-box {
+        display: flex;
+        flex-direction: column;
+        text-align: right;
+    }
+
+    .weekday {
+        font-size: 48px;
+        font-weight: 700;
+        color: #000;
+    }
+
+    .date {
+        font-size: 38px;
+        letter-spacing: 2px;
+        opacity: 0.95;
+        color: #000;
+    }
 </style>
 </head>
 <body>
 
-<div class="left">
-    <div class="left-top"><!-- empty or optional logo placement --></div>
-
-    <div class="left-bottom">
-        <div class="time" id="time"></div>
-        <div class="ampm" id="ampm"></div>
-    </div>
-</div>
-
-<div class="right">
-    <div style="text-align:right;">
-        <div class="weekday" id="weekday"></div>
-        <div class="date" id="date"></div>
+<div class="clock-container">
+    <div class="time glow" id="time"></div>
+    <div class="date-box">
+        <div class="weekday glow" id="weekday"></div>
+        <div class="date glow" id="date"></div>
     </div>
 </div>
 
 <script>
 function updateClock() {
     const now = new Date();
-    let h = now.getHours();
-    const m = String(now.getMinutes()).padStart(2, "0");
-    const ampm = h >= 12 ? "PM" : "AM";
-    h = h % 12 || 12;
 
-    document.getElementById("time").textContent = `${String(h).padStart(2,"0")}:${m}`;
-    document.getElementById("ampm").textContent = ampm;
+    // Time - 12h format
+    let hours = now.getHours();
+    const minutes = String(now.getMinutes()).padStart(2, "0");
+    const ampm = hours >= 12 ? "PM" : "AM";
+    hours = hours % 12;
+    hours = hours ? hours : 12;
+    const hourStr = String(hours).padStart(2, "0");
 
-    const weekdays = ["Sunday","Monday","Tuesday","Wednesday","Thursday","Friday","Saturday"];    
+    document.getElementById("time").innerHTML =
+        `${hourStr}:${minutes} <span class="ampm">${ampm}</span>`;
+
+    // Weekday
+    const weekdays = [
+        "Sunday","Monday","Tuesday","Wednesday","Thursday","Friday","Saturday"
+    ];
     document.getElementById("weekday").textContent = weekdays[now.getDay()];
 
+    // Date: 15 NOV 2025
     const day = String(now.getDate()).padStart(2, "0");
-    const monthNames = ["JAN","FEB","MAR","APR","MAY","JUN","JUL","AUG","SEP","OCT","NOV","DEC"];    
+    const monthNames = [
+        "JAN","FEB","MAR","APR","MAY","JUN",
+        "JUL","AUG","SEP","OCT","NOV","DEC"
+    ];
     const month = monthNames[now.getMonth()];
     const year = now.getFullYear();
 
